# spectral

./: .gitignore  CMakeLists.txt  README.md
aux/: CMakeLists.txt  example1.c  example1.cpp
inc/: spectral.h
src/: spectral.c
